# Qt6_Hello-World

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/qml/: main.qml
apps/src/: main.cpp
